--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "echarts": "^4.1.0",
     "vue": "^2.5.2",
     "vue-echarts": "^3.0.9",
+    "vue-echarts-v3": "^1.0.19",
     "vue-router": "^3.0.1",
     "yarn": "^1.7.0"
   },
