--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue": "^2.5.2",
     "vue-echarts": "^3.0.9",
     "vue-echarts-v3": "^1.0.19",
+    "vue-js-modal": "^1.3.16",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
