--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "echarts": "^4.1.0",
     "elasticsearch": "^15.1.1",
     "highcharts": "^6.1.1",
+    "material-icons": "^0.2.3",
     "vue": "^2.5.2",
     "vue-chartkick": "^0.4.0",
     "vue-echarts": "^3.0.9",
     "vue-echarts-v3": "^1.0.19",
     "vue-js-modal": "^1.3.16",
+    "vue-material": "^1.0.0-beta-10.2",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
