--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,16 @@ services:
       - 127.0.0.1:9300:9300
     environment:
       - discovery.type:single-node
+  mongodb:
+    image: mongo:latest
+    container_name: "mongodb"
+    environment:
+      - MONGO_DATA_DIR=/data/db
+      - MONGO_LOG_DIR=/dev/null
+    volumes:
+      - ./data/db:/data/db
+    ports:
+        - 27017:27017
+    command: mongod --smallfiles --logpath=/dev/null # --quiet
 volumes:
   luqs_dev_data:
