*basic models *router setup

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@ data
 # those files contain information about the local interpreter, which is not a shared thing
 **/.idea/*.iml
 **/.idea/misc.xml
+.idea/codeStyles/
+.idea/dbnavigator.xml
 
 **/ITERATION
 
