--- a/server/package.json
+++ b/server/package.json
@@ -13,11 +13,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/elasticsearch": "^5.0.26",
     "@types/express": "^4.16.0",
     "body-parser": "^1.18.3",
+    "elasticsearch": "^15.1.1",
     "express": "^4.16.3",
     "mongoose": "^5.3.0",
-    "nodemon": "^1.18.4"
+    "nodemon": "^1.18.4",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@types/mongodb": "^3.1.9",
