--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "echarts": "^4.1.0",
     "elasticsearch": "^15.1.1",
     "highcharts": "^6.1.1",
