--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,9 @@
     "vue-echarts-v3": "^1.0.19",
     "vue-js-modal": "^1.3.16",
     "vue-material": "^1.0.0-beta-10.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuejs-logger": "1.5.3",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
