--- a/server/package.json
+++ b/server/package.json
@@ -15,12 +15,14 @@
   "dependencies": {
     "@types/elasticsearch": "^5.0.26",
     "@types/express": "^4.16.0",
+    "app-root-path": "^2.1.0",
     "body-parser": "^1.18.3",
     "elasticsearch": "^15.1.1",
     "express": "^4.16.3",
     "mongoose": "^5.3.0",
     "nodemon": "^1.18.4",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "winston": "^3.1.0"
   },
   "devDependencies": {
     "@types/mongodb": "^3.1.9",
