--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "dev": "ts-node ./lib/server.ts",
     "start": "nodemon ./dist/server.js",
-    "start-debug": "tsc-watch --onSuccess \"nodemon dist/server.js\"",
+    "start-debug": "tsc-watch --onSuccess \"nodemon --inspect dist/server.js\"",
     "prod": "npm run build && npm run start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
