--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "elasticsearch": "^15.1.1",
     "highcharts": "^6.1.1",
     "material-icons": "^0.2.3",
+    "moment": "^2.22.2",
     "vue": "^2.5.2",
     "vue-chartkick": "^0.4.0",
     "vue-echarts": "^3.0.9",
