--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "express": "^4.16.3",
     "mongoose": "^5.3.0",
     "nodemon": "^1.18.4",
+    "supertest": "^3.3.0",
     "uuid": "^3.3.2",
     "winston": "^3.1.0"
   },
