* rewrote dashboard tests to async/await pattern * added validator * used validator exemplary in one endpoint * moved mongo initialisation to separate class

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -9,7 +9,8 @@
         "rootDir": "./lib"
     },
     "include": [
-        "lib/**/*.ts"
+        "lib/**/*.ts",
+        "__test__/**/**/*.ts"
     ],
     "exclude": [
         "node_modules"
