--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.18.3",
     "elasticsearch": "^15.1.1",
     "express": "^4.16.3",
+    "express-validator": "^5.3.0",
     "mongoose": "^5.3.0",
     "nodemon": "^1.18.4",
     "supertest": "^3.3.0",
