--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "luqs",
-  "version": "0.0.2",
+  "version": "v0.0.1",
   "description": "bäm bäm",
   "author": "andi <andi@zerotired.com>",
   "private": true,
